// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcAlert should display only with a the used amount and currency are given 1`] = `
<div
  class="ec-donut"
>
  <div
    class="ec-donut__container"
  >
    <svg
      class="ec-donut__svg"
      height="108"
      viewBox="0 0 108 108"
      width="108"
    >
      <circle
        class="ec-donut__background"
        cx="54"
        cy="54"
        fill="transparent"
        r="48"
        stroke-width="11"
      />
       
      <circle
        class="ec-donut__remaining"
        cx="54"
        cy="54"
        fill="transparent"
        r="48"
        stroke-dasharray="301.59289474462014"
        stroke-dashoffset="0"
        stroke-width="11"
      />
       
      <circle
        class="ec-donut__used"
        cx="54"
        cy="54"
        fill="transparent"
        r="48"
        stroke-dasharray="301.59289474462014"
        stroke-dashoffset="241.2743157956961"
        stroke-width="11"
      />
    </svg>
  </div>
   
  <div
    class="ec-donut__leyend"
  >
    <div
      class="ec-donut__leyend-used"
    >
      <svg
        class="ec-donut__leyend-icon--used ec-icon"
        height="14"
        width="14"
      >
        <use
          xlink:href="#ec-rounded-notification"
        />
      </svg>
       
      <span
        class="ec-donut__text-strong"
      >
        Used
      </span>
      
      GBP 20
    
    </div>
     
    <div>
      <svg
        class="ec-donut__leyend-icon--reminder ec-icon"
        height="14"
        width="14"
      >
        <use
          xlink:href="#ec-rounded-notification"
        />
      </svg>
       
      <span
        class="ec-donut__text-strong"
      >
        Reminder
      </span>
      
      GBP 80
    
    </div>
  </div>
</div>
`;

exports[`EcAlert should display with the empty used 1`] = `
<div
  class="ec-donut"
>
  <div
    class="ec-donut__container"
  >
    <svg
      class="ec-donut__svg"
      height="108"
      viewBox="0 0 108 108"
      width="108"
    >
      <circle
        class="ec-donut__background"
        cx="54"
        cy="54"
        fill="transparent"
        r="48"
        stroke-width="11"
      />
       
      <circle
        class="ec-donut__remaining"
        cx="54"
        cy="54"
        fill="transparent"
        r="48"
        stroke-dasharray="301.59289474462014"
        stroke-dashoffset="0"
        stroke-width="11"
      />
       
      <circle
        class="ec-donut__used"
        cx="54"
        cy="54"
        fill="transparent"
        r="48"
        stroke-dasharray="301.59289474462014"
        stroke-dashoffset="301.59289474462014"
        stroke-width="11"
      />
    </svg>
  </div>
   
  <div
    class="ec-donut__leyend"
  >
    <div
      class="ec-donut__leyend-used"
    >
      <svg
        class="ec-donut__leyend-icon--used ec-icon"
        height="14"
        width="14"
      >
        <use
          xlink:href="#ec-rounded-notification"
        />
      </svg>
       
      <span
        class="ec-donut__text-strong"
      >
        Used
      </span>
      
      GBP 0
    
    </div>
     
    <div>
      <svg
        class="ec-donut__leyend-icon--reminder ec-icon"
        height="14"
        width="14"
      >
        <use
          xlink:href="#ec-rounded-notification"
        />
      </svg>
       
      <span
        class="ec-donut__text-strong"
      >
        Reminder
      </span>
      
      GBP 100
    
    </div>
  </div>
</div>
`;

exports[`EcAlert should display with the full used 1`] = `
<div
  class="ec-donut"
>
  <div
    class="ec-donut__container"
  >
    <svg
      class="ec-donut__svg"
      height="108"
      viewBox="0 0 108 108"
      width="108"
    >
      <circle
        class="ec-donut__background"
        cx="54"
        cy="54"
        fill="transparent"
        r="48"
        stroke-width="11"
      />
       
      <circle
        class="ec-donut__remaining"
        cx="54"
        cy="54"
        fill="transparent"
        r="48"
        stroke-dasharray="301.59289474462014"
        stroke-dashoffset="0"
        stroke-width="11"
      />
       
      <circle
        class="ec-donut__used"
        cx="54"
        cy="54"
        fill="transparent"
        r="48"
        stroke-dasharray="301.59289474462014"
        stroke-dashoffset="0"
        stroke-width="11"
      />
    </svg>
  </div>
   
  <div
    class="ec-donut__leyend"
  >
    <div
      class="ec-donut__leyend-used"
    >
      <svg
        class="ec-donut__leyend-icon--used ec-icon"
        height="14"
        width="14"
      >
        <use
          xlink:href="#ec-rounded-notification"
        />
      </svg>
       
      <span
        class="ec-donut__text-strong"
      >
        Used
      </span>
      
      GBP 100
    
    </div>
     
    <div>
      <svg
        class="ec-donut__leyend-icon--reminder ec-icon"
        height="14"
        width="14"
      >
        <use
          xlink:href="#ec-rounded-notification"
        />
      </svg>
       
      <span
        class="ec-donut__text-strong"
      >
        Reminder
      </span>
      
      GBP 0
    
    </div>
  </div>
</div>
`;

exports[`EcAlert should display with the half used 1`] = `
<div
  class="ec-donut"
>
  <div
    class="ec-donut__container"
  >
    <svg
      class="ec-donut__svg"
      height="108"
      viewBox="0 0 108 108"
      width="108"
    >
      <circle
        class="ec-donut__background"
        cx="54"
        cy="54"
        fill="transparent"
        r="48"
        stroke-width="11"
      />
       
      <circle
        class="ec-donut__remaining"
        cx="54"
        cy="54"
        fill="transparent"
        r="48"
        stroke-dasharray="301.59289474462014"
        stroke-dashoffset="0"
        stroke-width="11"
      />
       
      <circle
        class="ec-donut__used"
        cx="54"
        cy="54"
        fill="transparent"
        r="48"
        stroke-dasharray="301.59289474462014"
        stroke-dashoffset="150.79644737231007"
        stroke-width="11"
      />
    </svg>
  </div>
   
  <div
    class="ec-donut__leyend"
  >
    <div
      class="ec-donut__leyend-used"
    >
      <svg
        class="ec-donut__leyend-icon--used ec-icon"
        height="14"
        width="14"
      >
        <use
          xlink:href="#ec-rounded-notification"
        />
      </svg>
       
      <span
        class="ec-donut__text-strong"
      >
        Used
      </span>
      
      GBP 50
    
    </div>
     
    <div>
      <svg
        class="ec-donut__leyend-icon--reminder ec-icon"
        height="14"
        width="14"
      >
        <use
          xlink:href="#ec-rounded-notification"
        />
      </svg>
       
      <span
        class="ec-donut__text-strong"
      >
        Reminder
      </span>
      
      GBP 50
    
    </div>
  </div>
</div>
`;
